// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetails Unknown transaction returns empty string 1`] = `
<div
  class="tx__content"
>
  <!---->
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgBeginRedelegate transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Redelegated
      
        <b>
          0.01
        </b>
         
        <span>
           ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    From 
    
      <router-link-stub
        to="staking/validators/cosmosvaloper1sjllsnasdmasakjshdlkdhjasldnasd"
      >
        
      cosmosvaloper…nasd 
      </router-link-stub>
      To 
    
      <router-link-stub
        to="staking/validators/cosmosvaloper1uaisjdnidjnlaskjdnlkjasndlkadjn"
      >
        
      cosmosvaloper…adjn
    
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        20.00083
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #726616 
      </router-link-stub>
      
    @ Jun 19th 2019 14:45:43
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgCreateValidator transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Create validator
    
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    Monikor 
    
      <router-link-stub
        to="staking/validators/cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj"
      >
        
      cosmos…dlkj
    
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgDelegate transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Delegated
      
        <b>
          0.05
        </b>
         
        <span>
           ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    To 
    
      <router-link-stub
        to="staking/validators/cosmosvaloper1uaisjdnidjnlaskjdnlkjasndlkadjn"
      >
        
      cosmosvaloper…adjn
    
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        10.00066
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #726599 
      </router-link-stub>
      
    @ Jun 19th 2019 14:43:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgDeposit transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Deposited
      
        <b>
          0.2345
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    On
    
      <router-link-stub
        to="/governance/2"
      >
        Proposal #2
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        69
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626103 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgEditValidator transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Edit validator
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    Monikor 
    
      <router-link-stub
        to="staking/validators/cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj"
      >
        
      cosmos…dlkj
    
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSend transaction item from other to you 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    validators="[object Object]"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Received
      
        <b>
           0.2345
        </b>
         
        <span>
           ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
      From 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
        >
          
    cosmos…1212
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
        </div>
      </div>
       
      <span>
         - (Sent via Lunie)
      </span>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.00037
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1086769 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSend transaction item from session user to other 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    validators="[object Object]"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Sent
      
        <b>
           0.2345
        </b>
         
        <span>
           ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
      To 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
        >
          
    cosmos…sdas
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
        </div>
      </div>
       
      <span>
         - (Sent via Lunie)
      </span>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.00037
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1086769 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSend transaction item to yourself 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    validators="[object Object]"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Sent
      
        <b>
           0.2345
        </b>
         
        <span>
           ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
      To yourself!
     
      <span>
         - (Sent via Lunie)
      </span>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.00037
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1086769 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSend transaction item unrelated to session user 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    validators="[object Object]"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Sent
      
        <b>
           0.2345
        </b>
         
        <span>
           ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
      From 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
        >
          
    cosmos…dlkj
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
        </div>
      </div>
       to 
      
      <div
        class="bech32-address"
      >
        <div
          class="address"
        >
          
    cosmos…dlkj
  
        </div>
         
        <div
          class="copied"
        >
          <i
            class="material-icons"
          >
            check
          </i>
        </div>
      </div>
       
      <span>
         - (Sent via Lunie)
      </span>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0.00037
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1086769 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSetWithdrawAddress transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Update withdraw address
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    To cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj
  
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSetWithdrawValidatorCommission transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Withdraw validator commission
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    From 
    
      <router-link-stub
        to="staking/validators/cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj"
      >
        cosmos…dlkj
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgSubmitProposal transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Submitted text proposal
      
        <b>
          0.2
        </b>
         
        <span>
          ATOM
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    Title
    
      <i>
        Test title
      </i>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        69
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgUndelegate transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        
      Undelegated
      
        <b>
          0.05
        </b>
         
        <span>
           ATOM
        </span>
         
        <span
          class="tx-unbonding__time-diff"
        >
           (liquid in 50 years)
        </span>
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    From 
    
      <router-link-stub
        to="/validators/cosmosvaloper1lsajkdalskdjhasldkahsdljkalskdjhlaks"
      >
        
      cosmosvaloper…laks
    
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        410.00041
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #1248479 
      </router-link-stub>
      
    @ Jul 31st 2019 09:22:23
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgUnjail transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Unjail
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    Name:
    
      <router-link-stub
        to="staking/validators/cosmos1alkjdbasdlkhasldjnasldkjasndlkjansdlasndlkj"
      >
        cosmos…dlkj
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgVote transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Voted NoWithVeto
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    On 
    
      <router-link-stub
        to="/governance/13"
      >
        Proposal #13
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        69
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626103 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;

exports[`TransactionDetails renders MsgWithdrawDelegationReward transaction item 1`] = `
<div
  class="tx__content"
>
  <div
    class="tx__content__left"
    session-address="cosmos1"
  >
    <div
      class="tx__content__caption"
    >
      <p>
        Withdrawal
      </p>
    </div>
     
    <div
      class="tx__content__information"
    >
      
    From 
    
      <router-link-stub
        to="staking/validators/cosmosvaloper1sjllsnasdmasakjshdlkdhjasldnasdnadn"
      >
        cosmosvaloper…nadn
      </router-link-stub>
    </div>
  </div>
   
  <div
    class="tx__content__right"
  >
    <div>
      
    Network Fee: 
    
      <b>
        0
      </b>
       
      <span>
         ATOM
      </span>
    </div>
     
    <div>
      <router-link-stub
        to="[object Object]"
      >
        Block #626102 
      </router-link-stub>
      
    @ Jun 11th 2019 13:47:45
  
    </div>
  </div>
</div>
`;
